# drf_celery_websocket

./: .env-template  .gitignore  Makefile  manage.py  pyproject.toml
drf_celery_websocket/: asgi.py  settings.py  urls.py  wsgi.py
drf_celery_websocket/users/: admin.py  apps.py  models.py  serializers.py
drf_celery_websocket/users/migrations/: 0001_initial.py
